--- a/index.html
+++ b/index.html
@@ -1,55 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Home | TalkNix</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #e9ecef;
-      margin: 0;
-      padding: 20px;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 40px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-    h1 {
-      color: #333;
-      margin-bottom: 20px;
-    }
-    #user-info {
-      margin-bottom: 30px;
-      font-size: 18px;
-      color: #555;
-    }
-    .logout-btn {
-      background: #dc3545;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .logout-btn:hover {
-      background: #c82333;
-    }
-  </style>
+    <title>TalkNix WebRTC Signaling</title>
 </head>
 <body>
-  <div class="container">
-    <h1>Dashboard</h1>
-    <p id="user-info">Loading user info...</p>
-    <button id="logout-btn" class="logout-btn">Logout</button>
-  </div>
-  <script type="module" src="app.js"></script>
+    <h2>TalkNix P2P Signaling</h2>
+    <button onclick="startSignaling()">Connect</button>
+    <script>
+        let socket = new WebSocket("wss://signaling.simplewebrtc.com");
+
+        function startSignaling() {
+            socket.send(JSON.stringify({ type: "offer", data: "Request to connect" }));
+        }
+
+        socket.onmessage = (event) => {
+            console.log("Message from peer:", event.data);
+        };
+    </script>
 </body>
 </html>
