--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>TalkNix WebRTC Signaling</title>
+    <meta name="google-site-verification" content="KIaKv1q0VsEDbSK6SxF9_s00vPhySNIod2Tg9AEp5zI" />
 </head>
 <body>
     <h2>TalkNix P2P Signaling</h2>
