--- a/index.html
+++ b/index.html
@@ -5,125 +5,152 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P2P WebRTC Chat</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             background: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        .container {
+            width: 90%;
+            max-width: 500px;
+            margin: 20px auto;
             padding: 20px;
+            background: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+        h2 {
+            color: #007bff;
         }
         textarea, input {
-            width: 90%;
-            height: 100px;
+            width: 100%;
+            height: 80px;
             margin: 10px 0;
-            padding: 5px;
-            font-size: 16px;
+            padding: 10px;
+            font-size: 14px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            resize: none;
         }
         input {
             height: 40px;
         }
-        button {
+        .btn {
             padding: 10px;
-            margin: 5px;
+            width: 100%;
+            border: none;
             cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            margin-top: 5px;
+        }
+        .btn-primary {
             background: #007bff;
             color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
         }
-        button:hover {
+        .btn-primary:hover {
             background: #0056b3;
+        }
+        .btn-success {
+            background: #28a745;
+            color: white;
+        }
+        .btn-success:hover {
+            background: #1e7e34;
         }
         #messages {
             border: 1px solid #ddd;
             padding: 10px;
-            width: 90%;
             height: 200px;
             overflow-y: auto;
-            background: white;
-            margin: auto;
+            background: #fafafa;
+            border-radius: 5px;
+            text-align: left;
         }
-        .copy-btn {
-            background: #28a745;
+        .message {
+            margin: 5px 0;
         }
-        .copy-btn:hover {
-            background: #1e7e34;
+        .you {
+            color: #007bff;
         }
-        @media (max-width: 600px) {
-            textarea, input {
-                width: 95%;
-            }
-            button {
-                width: 95%;
-            }
+        .friend {
+            color: #28a745;
         }
     </style>
 </head>
 <body>
+
+<div class="container">
     <h2>WebRTC P2P Chat</h2>
 
-    <button onclick="createOffer()">Create Offer</button>
-    <textarea id="offer" readonly></textarea>
-    <button class="copy-btn" onclick="copyText('offer')">Copy</button>
+    <button class="btn btn-primary" onclick="createOffer()">Create Offer</button>
+    <textarea id="offer" readonly placeholder="Offer will appear here"></textarea>
+    <button class="btn btn-success" onclick="copyText('offer')">Copy Offer</button>
 
-    <br>
-    <button onclick="acceptOffer()">Accept Offer</button>
-    <textarea id="answer" readonly></textarea>
-    <button class="copy-btn" onclick="copyText('answer')">Copy</button>
+    <button class="btn btn-primary" onclick="acceptOffer()">Accept Offer</button>
+    <textarea id="answer" readonly placeholder="Answer will appear here"></textarea>
+    <button class="btn btn-success" onclick="copyText('answer')">Copy Answer</button>
 
-    <br>
     <textarea id="remoteAnswer" placeholder="Paste received answer here"></textarea>
-    <button onclick="connect()">Connect</button>
+    <button class="btn btn-primary" onclick="connect()">Connect</button>
 
     <h3>Chat</h3>
     <div id="messages"></div>
     <input type="text" id="messageInput" placeholder="Type message...">
-    <button onclick="sendMessage()">Send</button>
+    <button class="btn btn-primary" onclick="sendMessage()">Send</button>
+</div>
 
-    <script>
-        let peerConnection = new RTCPeerConnection();
-        let dataChannel = peerConnection.createDataChannel("chat");
+<script>
+    let peerConnection = new RTCPeerConnection();
+    let dataChannel = peerConnection.createDataChannel("chat");
 
-        dataChannel.onmessage = (event) => {
-            let chatBox = document.getElementById("messages");
-            chatBox.innerHTML += `<p><b>Friend:</b> ${event.data}</p>`;
-        };
+    dataChannel.onmessage = (event) => {
+        let chatBox = document.getElementById("messages");
+        chatBox.innerHTML += `<p class="message friend"><b>Friend:</b> ${event.data}</p>`;
+        chatBox.scrollTop = chatBox.scrollHeight;
+    };
 
-        async function createOffer() {
-            let offer = await peerConnection.createOffer();
-            await peerConnection.setLocalDescription(offer);
-            document.getElementById("offer").value = JSON.stringify(offer);
-        }
+    async function createOffer() {
+        let offer = await peerConnection.createOffer();
+        await peerConnection.setLocalDescription(offer);
+        document.getElementById("offer").value = JSON.stringify(offer);
+    }
 
-        async function acceptOffer() {
-            let offer = JSON.parse(document.getElementById("offer").value);
-            await peerConnection.setRemoteDescription(offer);
-            let answer = await peerConnection.createAnswer();
-            await peerConnection.setLocalDescription(answer);
-            document.getElementById("answer").value = JSON.stringify(answer);
-        }
+    async function acceptOffer() {
+        let offer = JSON.parse(document.getElementById("offer").value);
+        await peerConnection.setRemoteDescription(offer);
+        let answer = await peerConnection.createAnswer();
+        await peerConnection.setLocalDescription(answer);
+        document.getElementById("answer").value = JSON.stringify(answer);
+    }
 
-        async function connect() {
-            let answer = JSON.parse(document.getElementById("remoteAnswer").value);
-            await peerConnection.setRemoteDescription(answer);
-        }
+    async function connect() {
+        let answer = JSON.parse(document.getElementById("remoteAnswer").value);
+        await peerConnection.setRemoteDescription(answer);
+    }
 
-        function sendMessage() {
-            let messageInput = document.getElementById("messageInput");
-            let message = messageInput.value;
-            if (message.trim() === "") return;
-            dataChannel.send(message);
-            document.getElementById("messages").innerHTML += `<p><b>You:</b> ${message}</p>`;
-            messageInput.value = "";
-        }
+    function sendMessage() {
+        let messageInput = document.getElementById("messageInput");
+        let message = messageInput.value;
+        if (message.trim() === "") return;
+        dataChannel.send(message);
+        document.getElementById("messages").innerHTML += `<p class="message you"><b>You:</b> ${message}</p>`;
+        messageInput.value = "";
+    }
 
-        function copyText(id) {
-            let textArea = document.getElementById(id);
-            textArea.select();
-            textArea.setSelectionRange(0, 99999);
-            document.execCommand("copy");
-            alert("Copied!");
-        }
-    </script>
+    function copyText(id) {
+        let textArea = document.getElementById(id);
+        textArea.select();
+        textArea.setSelectionRange(0, 99999);
+        document.execCommand("copy");
+        alert("Copied!");
+    }
+</script>
+
 </body>
 </html>
