--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
         <div class="connection-box">
             <input type="text" id="codeInput" placeholder="Enter or Generate 7-digit code">
-            <button onclick="generateCode()">Generate Code</button>
-            <button onclick="joinChat()">Join Chat</button>
+            <button id="generateBtn">Generate Code</button>
+            <button id="joinBtn">Join Chat</button>
         </div>
 
         <div class="chat-box">
             <div id="messages"></div>
             <input type="text" id="messageInput" placeholder="Type a message...">
-            <button onclick="sendMessage()">Send</button>
+            <button id="sendBtn">Send</button>
         </div>
     </div>
 
