--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
         #clear-chat:hover {
             background-color: #c82333;
         }
+        #status {
+            text-align: center;
+            color: #555;
+            margin-top: 10px;
+            font-size: 14px;
+        }
         @media (max-width: 480px) {
             #code-section {
                 flex-direction: column;
@@ -139,6 +145,7 @@
                 <button id="send-message">Send</button>
                 <button id="clear-chat">Clear Chat</button>
             </div>
+            <div id="status">Status: Not Connected</div>
         </div>
     </div>
 
