--- a/index.html
+++ b/index.html
@@ -1,159 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Talknix P2P WebRTC Chat</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f2f5;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .container {
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            width: 100%;
-            max-width: 600px;
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-            font-size: 24px;
-        }
-        #code-section {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-bottom: 20px;
-            align-items: center;
-        }
-        #code-section label {
-            font-weight: bold;
-            color: #555;
-        }
-        #chat-code {
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            flex: 1;
-            min-width: 150px;
-            font-size: 14px;
-        }
-        button {
-            padding: 8px 16px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        button:disabled {
-            background-color: #cccccc;
-            cursor: not-allowed;
-        }
-        .loading::after {
-            content: " Loading...";
-        }
-        #chat-window {
-            background: #fafafa;
-            border-radius: 5px;
-            padding: 15px;
-            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
-        }
-        #messages {
-            height: 250px;
-            overflow-y: auto;
-            border: 1px solid #eee;
-            padding: 10px;
-            margin-bottom: 15px;
-            background: #fff;
-            border-radius: 5px;
-            font-size: 14px;
-            color: #333;
-        }
-        #messages div {
-            padding: 5px 0;
-            word-wrap: break-word;
-        }
-        #input-area {
-            display: flex;
-            gap: 10px;
-        }
-        #message-input {
-            flex: 1;
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 14px;
-        }
-        #message-input:focus, #chat-code:focus {
-            outline: none;
-            border-color: #007bff;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
-        }
-        #clear-chat {
-            background-color: #dc3545;
-        }
-        #clear-chat:hover {
-            background-color: #c82333;
-        }
-        #status {
-            text-align: center;
-            color: #555;
-            margin-top: 10px;
-            font-size: 14px;
-        }
-        @media (max-width: 480px) {
-            #code-section {
-                flex-direction: column;
-                align-items: stretch;
-            }
-            button {
-                width: 100%;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register - P2P Chat</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+    }
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      max-width: 400px;
+      width: 100%;
+    }
+    h1 {
+      color: #2a5298;
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+    button {
+      background: #2a5298;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+      width: 100%;
+    }
+    button:hover {
+      background: #1e3c72;
+    }
+    #status {
+      color: #555;
+      margin: 10px 0;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Talknix P2P WebRTC Chat</h1>
-        
-        <div id="code-section">
-            <label for="chat-code">Chat Code:</label>
-            <input type="text" id="chat-code" placeholder="Enter or generate chat code">
-            <button id="generate-code">Generate Code</button>
-            <button id="join-chat">Join Chat</button>
-        </div>
+  <div class="container">
+    <h1>Register/Login for P2P Chat</h1>
+    <input id="email" type="email" placeholder="Email">
+    <input id="password" type="password" placeholder="Password">
+    <button onclick="login()">Login / Register</button>
+    <p id="status"></p>
+    <button onclick="window.location.href='chat.html'" id="proceed" style="display:none;">Go to Chat</button>
+  </div>
 
-        <div id="chat-window">
-            <div id="messages"></div>
-            <div id="input-area">
-                <input type="text" id="message-input" placeholder="Type your message">
-                <button id="send-message">Send</button>
-                <button id="clear-chat">Clear Chat</button>
-            </div>
-            <div id="status">Status: Not Connected</div>
-        </div>
-    </div>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
 
-    <!-- Firebase SDK (Compat Versions) -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-    
-    <!-- Local Script -->
-    <script src="script.js"></script>
+  <script>
+    const firebaseConfig = {
+  apiKey: "AIzaSyCiN7DLtxTHncqYGy0hGCFao9TCAu2Z4mo",
+  authDomain: "talknix-p2p.firebaseapp.com",
+  databaseURL: "https://talknix-p2p-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "talknix-p2p",
+  storageBucket: "talknix-p2p.firebasestorage.app",
+  messagingSenderId: "1091516076156",
+  appId: "1:1091516076156:web:09337436dcc867760279f9",
+ 
+};
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.database();
+
+    function generate7DigitId() {
+      return Math.floor(1000000 + Math.random() * 9000000);
+    }
+
+    async function getIpDetails() {
+      const response = await fetch("https://ipapi.co/json/");
+      return await response.json(); // Returns IP, city, country, etc.
+    }
+
+    async function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const status = document.getElementById("status");
+
+      if (!email || !password) {
+        status.textContent = "Please enter email and password!";
+        return;
+      }
+
+      status.textContent = "Processing...";
+
+      try {
+        // Try to log in
+        let userCredential = await auth.signInWithEmailAndPassword(email, password);
+        await handleUser(userCredential.user);
+      } catch (error) {
+        if (error.code === "auth/user-not-found") {
+          // If user doesn’t exist, register them
+          try {
+            userCredential = await auth.createUserWithEmailAndPassword(email, password);
+            await handleUser(userCredential.user);
+          } catch (regError) {
+            status.textContent = `Registration failed: ${regError.message}`;
+          }
+        } else {
+          status.textContent = `Login failed: ${error.message}`;
+        }
+      }
+    }
+
+    async function handleUser(user) {
+      let myId = localStorage.getItem("userId");
+      if (!myId) {
+        let unique = false;
+        while (!unique) {
+          myId = generate7DigitId();
+          const snapshot = await db.ref(`users/${myId}`).once("value");
+          if (!snapshot.exists()) unique = true;
+        }
+        const ipDetails = await getIpDetails();
+        await db.ref(`users/${myId}`).set({
+          email: user.email,
+          registered: true,
+          status: "online",
+          ip: ipDetails.ip,
+          city: ipDetails.city || "Unknown",
+          country: ipDetails.country_name || "Unknown",
+          timestamp: firebase.database.ServerValue.TIMESTAMP
+        });
+        localStorage.setItem("userId", myId);
+      }
+      document.getElementById("status").textContent = `Logged in! Your ID: ${myId}`;
+      document.getElementById("proceed").style.display = "block";
+    }
+
+    // Redirect if already logged in
+    auth.onAuthStateChanged(user => {
+      if (user && localStorage.getItem("userId")) {
+        document.getElementById("status").textContent = `Logged in! Your ID: ${localStorage.getItem("userId")}`;
+        document.getElementById("proceed").style.display = "block";
+      }
+    });
+  </script>
 </body>
 </html>
