--- a/chat.html
+++ b/chat.html
@@ -94,15 +94,16 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DATABASE_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+   const firebaseConfig = {
+  apiKey: "AIzaSyCiN7DLtxTHncqYGy0hGCFao9TCAu2Z4mo",
+  authDomain: "talknix-p2p.firebaseapp.com",
+  databaseURL: "https://talknix-p2p-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "talknix-p2p",
+  storageBucket: "talknix-p2p.firebasestorage.app",
+  messagingSenderId: "1091516076156",
+  appId: "1:1091516076156:web:09337436dcc867760279f9",
+ 
+};
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.database();
